--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -168,7 +168,7 @@
         </div>
         <div class="modal-body">
           <h2 id="friendsName"></h2>
-          <img id="friendsImg" src="https://vignette.wikia.nocookie.net/friends/images/8/85/Monica_3.jpg/revision/latest?cb=20190210055747" alt="Monica">
+          <img id="friendsImg" style="width: 100%;" src="https://vignette.wikia.nocookie.net/friends/images/8/85/Monica_3.jpg/revision/latest?cb=20190210055747" alt="Monica">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
